User git instead of http to fetch erlydtl.

--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,6 @@
 {deps, 
 	[
 		{webmachine, "1.7.*", {git, "git://github.com/basho/webmachine", "HEAD"}},
-		{erlydtl, "0.6.1", {git, "http://github.com/evanmiller/erlydtl.git", "master"}}
+		{erlydtl, "0.6.1", {git, "git://github.com/evanmiller/erlydtl", "master"}}
 	]
 }.
