--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,3 @@
 %% vim: set filetype=erlang :
 
-{deps, 
-	[
-		{webmachine, "1.7.*", {git, "git://github.com/basho/webmachine", "HEAD"}},
-		{erlydtl, "0.6.1", {git, "git://github.com/evanmiller/erlydtl", "master"}}
-	]
-}.
+{sub_dirs, ["apps/sws"]}.
