--- a/apps/sws/rebar.config
+++ b/apps/sws/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, 
 	[
-		{webmachine, "1.7.*", {git, "git://github.com/basho/webmachine", "HEAD"}},
-		{erlydtl, "0.6.1", {git, "git://github.com/evanmiller/erlydtl", "master"}}
+		{webmachine, "1.8.0", {git, "git://github.com/basho/webmachine", {tag, "webmachine-1.8.0"}}},
+		{erlydtl, "0.7.0", {git, "git://github.com/evanmiller/erlydtl", "master"}}
 	]
 }.
