Move dispatch.conf to 'etc' directory.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -6,7 +6,7 @@
 		[
 			{ip, "127.0.0.1"},
 			{port, 8000},
-			{dispatch_conf_path, "www/dispatch.conf"},
+			{dispatch_conf_path, "etc/dispatch.conf"},
 			{www_root, "www"},
 			{log_dir, "log"}
 		]
