--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -39,7 +39,7 @@
 		{mkdir, "www/templates"},
 		{copy, "files/app.config", "etc/app.config"},
 		{copy, "files/sws", "bin/sws"},
-		{copy, "files/dispatch.conf", "www/dispatch.conf"},
+		{copy, "files/dispatch.conf", "etc/dispatch.conf"},
 		{copy, "files/erl", "{{erts_vsn}}/bin/erl"},
 		{copy, "files/nodetool", "{{erts_vsn}}/bin/nodetool" },
 		{copy, "files/vm.args", "etc/vm.args"}
