Make URI available in the pages.
The URI can, for instance, be used to highlight menu items.

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,10 +1,10 @@
 %% vim: set filetype=erlang :
 
 %% Page rules
-{[],							sws_page_resource,	[{menu, home}]}.
-{["home"],				sws_page_resource,	[{menu, home}]}.
-{["docs"],				sws_page_resource,	[{menu, docs}]}.
-{["license"],			sws_page_resource,	[{menu, license}]}.
+{[],							sws_page_resource,	[]}.
+{["home"],				sws_page_resource,	[]}.
+{["docs"],				sws_page_resource,	[]}.
+{["license"],			sws_page_resource,	[]}.
 
 
 %% File rules
