Add configuration module.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -7,8 +7,8 @@
 			{ip, "127.0.0.1"},
 			{port, 8000},
 			{dispatch_conf_path, "etc/dispatch.conf"},
-			{www_root, "www"},
-			{log_dir, "log"}
+			{www_root_path, "www"},
+			{log_dir_path, "log"}
 		]
 	},
 
