--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -8,7 +8,11 @@
 			{port, 8000},
 			{dispatch_conf_path, "etc/dispatch.conf"},
 			{www_root_path, "www"},
-			{log_dir_path, "log"}
+			{log_dir_path, "log"},
+			{page_expire_time, 3600},			% 1 hour
+			{file_expire_time, 86400},		% 24 hours
+			{lib_expire_time, 3600},			% 1 hour
+			{misc_expire_time, 2592000}		% 30 days
 		]
 	},
 
