Improve URL dispatching rules.

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,12 +1,5 @@
 %% vim: set filetype=erlang :
 
-%% Page rules
-{[],							sws_page_resource,	[]}.
-{["home"],				sws_page_resource,	[]}.
-{["docs"],				sws_page_resource,	[]}.
-{["license"],			sws_page_resource,	[]}.
-
-
 %% File rules
 {["files", '*'],	sws_static_resource,	[{type, file}]}.
 
@@ -18,4 +11,8 @@
 %% Misc rules
 {["favicon.ico"],	sws_static_resource,	[{type, misc}]}.
 {["robots.txt"],	sws_static_resource,	[{type, misc}]}.
+
+
+%% Page rules
+{['*'],						sws_page_resource,		[]}.
 
