Add virtual hosting.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -12,7 +12,8 @@
 			{page_expire_time, 3600},			% 1 hour
 			{file_expire_time, 86400},		% 24 hours
 			{lib_expire_time, 3600},			% 1 hour
-			{misc_expire_time, 2592000}		% 30 days
+			{misc_expire_time, 2592000},	% 30 days
+			{virtual_hosting, false}
 		]
 	},
 
