Add gallery resource.

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,18 +1,22 @@
 %% vim: set filetype=erlang :
 
 %% File rules
-{["files", '*'],	sws_static_resource,	[{type, file}]}.
+{["files", '*'],		sws_static_resource,	[{type, file}]}.
 
 
 %% Lib rules
-{["lib", '*'],		sws_static_resource,	[{type, lib}]}.
+{["lib", '*'],			sws_static_resource,	[{type, lib}]}.
 
 
 %% Misc rules
-{["favicon.ico"],	sws_static_resource,	[{type, misc}]}.
-{["robots.txt"],	sws_static_resource,	[{type, misc}]}.
+{["favicon.ico"],		sws_static_resource,	[{type, misc}]}.
+{["robots.txt"],		sws_static_resource,	[{type, misc}]}.
+
+
+%% Gallery rules
+{["gallery", '*'],  sws_gallery_resource, []}.
 
 
 %% Page rules
-{['*'],						sws_page_resource,		[]}.
+{['*'],             sws_page_resource,    []}.
 
