Change expire times.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -9,9 +9,9 @@
       {dispatch_conf_path, "etc/dispatch.conf"},
       {www_root_path, "www"},
       {log_dir_path, "log"},
-      {page_expire_time, 3600},     % 1 hour
+      {page_expire_time, 3600},     % 60 minutes
       {file_expire_time, 86400},    % 24 hours
-      {lib_expire_time, 3600},      % 1 hour
+      {lib_expire_time, 2592000},   % 30 days
       {misc_expire_time, 2592000},  % 30 days
       {virtual_hosting, false}
     ]
